--- a/sampleMobileOffChat/_c8oProject/sequences/Login.yaml
+++ b/sampleMobileOffChat/_c8oProject/sequences/Login.yaml
@@ -112,18 +112,20 @@
       - SmartType: 
         - ↑mode: JS
         - →→: username
-↓Element [steps.XMLElementStep-1433256479340]: 
-  nodeName: ok
-  nodeText: true
-  ↓Attribute [steps.XMLAttributeStep-1518023293305]: 
-    nodeName: type
-    nodeText: boolean
-↓jElement1 [steps.ElementStep-1518022450797]: 
-  expression: '"" + new Date().getTime()'
-  nodeName: ts
-  ↓Attribute [steps.XMLAttributeStep-1518023240095]: 
-    nodeName: type
-    nodeText: long
+↓jIf1 [steps.IfStep-1534949953419]: 
+  condition: true
+  ↓Element [steps.XMLElementStep-1433256479340]: 
+    nodeName: ok
+    nodeText: true
+    ↓Attribute [steps.XMLAttributeStep-1518023293305]: 
+      nodeName: type
+      nodeText: boolean
+  ↓jElement1 [steps.ElementStep-1518022450797]: 
+    expression: '"" + new Date().getTime()'
+    nodeName: ts
+    ↓Attribute [steps.XMLAttributeStep-1518023240095]: 
+      nodeName: type
+      nodeText: long
 ↓username [variables.RequestableVariable-1433256479347]: 
   value: 
 ↓password [variables.RequestableVariable-1433256479354]: 
